# teal

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  hem.py  omm.py
scripts/: Manifest.toml  Project.toml  README.md  tobc_ani.jl  tobc_gen.jl  tobc_plot.jl
src/teal/: __init__.py  const.py  dirs.py  ops.py  submit.py  train.py
src/teal/ansatz/: __init__.py  decorators.py  rydberg.py
src/teal/ansatz/op/: __init__.py  base.py  each.py  ident.py  linear.py  neural.py
src/teal/ansatz/pulse/: __init__.py  neural.py  one.py  poly.py
src/teal/block/: __init__.py  base.py  storage.py  system.py
src/teal/block/ham/: base.py  heisenberg.py  rydberg.py  tfim.py
src/teal/block/obs/: base.py  corr.py
src/teal/block/state/: base.py  zero.py
src/teal/logging/: toml.py
src/teal/rg/: __init__.py  flow.py  series.py
src/teal/solve/: __init__.py  at.py  solo.py
