[project]
name = "olrg-teal"
version = "0.1.0"
description = "Operator Learning Renormalization Group (OLRG) method."
authors = [{ name = "Roger-luo", email = "rogerluo.rl18@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "jax>=0.4.23",
    "flax>=0.8.0",
    "optax>=0.1.8",
    "tqdm>=4.66.1",
    "wandb>=0.16.2",
    "tomlkit>=0.12.3",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = {file = "LICENSE"}

[project.scripts]
hello = "teal:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "twine>=4.0.2",
    "ipython>=8.21.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "coverage>=7.4.1",
    "jupyter>=1.0.0",
    "jupytext>=1.16.1",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.2",
    "icecream>=2.1.3",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.6",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-jupyter>=0.24.6",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mike>=2.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/teal"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py310"
